--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
   "scripts": {
     "build": "microbundle",
     "dev": "microbundle watch",
-    "prepare": "yarn build"
+    "prepare": "yarn build",
+    "test": "eslint src __tests__ --fix && jest --coverage --config=jest.config.js"
   },
   "dependencies": {},
   "devDependencies": {
-    "microbundle": "^0.11.0"
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "eslint": "^5.15.1",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "jest": "^24.5.0",
+    "microbundle": "^0.11.0",
+    "prettier": "^1.16.4"
   },
   "repository": {
     "type": "git",
